--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "czat",
   "version": "1.0.0",
   "description": "create chat",
-  "main": "index.js",
+  "main": "./client/js/index.js",
   "scripts": {
     "start": "webpack-dev-server --hot --env development",
     "build": "webpack --env production"
